# ChangeLog for sys-apps/man
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man/ChangeLog,v 1.166 2011/01/06 02:52:03 vapier Exp $

  06 Jan 2011; Mike Frysinger <vapier@gentoo.org> man-1.6g.ebuild:
  Update blocker to allow newer versions of app-arch/lzma #218459.

*man-1.6g (02 Jan 2011)

  02 Jan 2011; Mike Frysinger <vapier@gentoo.org> +man-1.6g.ebuild,
  +files/man-1.6g-compress.patch, +files/man-1.6g-fbsd.patch,
  +files/man-1.6g-xz.patch, metadata.xml:
  Version bump.

  30 Oct 2010; Raúl Porcel <armin76@gentoo.org> man-1.6f-r4.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #338088

  12 Oct 2010; Jeroen Roovers <jer@gentoo.org> man-1.6f-r4.ebuild:
  Stable for HPPA (bug #338088).

  10 Oct 2010; Markus Meier <maekke@gentoo.org> man-1.6f-r4.ebuild:
  arm stable, bug #338088

  30 Sep 2010; Brent Baude <ranger@gentoo.org> man-1.6f-r4.ebuild:
  stable ppc64, bug 338088

  27 Sep 2010; Brent Baude <ranger@gentoo.org> man-1.6f-r4.ebuild:
  Marking man-1.6f-r4 ppc for bug 38088

  25 Sep 2010; Markus Meier <maekke@gentoo.org> man-1.6f-r4.ebuild:
  amd64/x86 stable, bug #338088

*man-1.6f-r5 (19 Sep 2010)

  19 Sep 2010; Mike Frysinger <vapier@gentoo.org> +man-1.6f-r5.ebuild,
  +files/man-1.6f-makewhatis-compression-cleanup.patch:
  Add fix by William Throwe with misdetecting package names of compressed man
  pages #331979.

  28 Jan 2010; Mike Frysinger <vapier@gentoo.org>
  files/man-1.6f-parallel-build.patch:
  Fix building with all linguas #302423 by Ooblick.

*man-1.6f-r4 (27 Jan 2010)

  27 Jan 2010; Mike Frysinger <vapier@gentoo.org> +man-1.6f-r4.ebuild,
  +files/man-1.6f-man2html-compression-2.patch,
  +files/man-1.6f-parallel-build.patch, +files/man-1.6f-so-search-2.patch,
  +files/man-1.6f-xz.patch:
  Tweak log output #194532 by Ken Rushia. Fix by Kevin Pyle for parallel
  build errors #207148 by Csaba Tóth. Fix parallel build warnings #258916