@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/man
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man/ChangeLog,v 1.166 2011/01/06 02:52:03 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man/ChangeLog,v 1.167 2011/04/13 15:03:49 ulm Exp $
+
+  13 Apr 2011; Ulrich Mueller <ulm@gentoo.org> man-1.6f-r4.ebuild,
+  man-1.6f-r5.ebuild, man-1.6g.ebuild:
+  Don't PROVIDE virtual/man, it is a new-style virtual now. Bug 358839.
 
   06 Jan 2011; Mike Frysinger <vapier@gentoo.org> man-1.6g.ebuild:
   Update blocker to allow newer versions of app-arch/lzma #218459.
